# django-polymorphic-models

./: .gitattributes  README.md  pyproject.toml
composite/: models.py
composite/migrations/: 0001_initial.py
core/: settings.py
inheritance/: models.py
inheritance/migrations/: 0001_initial.py
