[tool.poetry]
name = "django-polymorphic-models"
version = "0.1.0"
description = ""
authors = ["ChoiWheatley <chltmdgus604@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
